<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<TextView
	    android:id="@+id/user"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:layout_marginBottom="10dp"
	    android:text="@string/user"
	    android:textSize="16sp" />

    <Button
        android:id="@+id/button_my_incidences_opened"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_my_incidences_opened"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/button_orphans"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_orphans"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/button_my_incidences_closed"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_my_incidences_closed"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/display"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />
    </ScrollView>

</LinearLayout>