<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/incidence_detail_title"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/detail_incidence"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_call_contact"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/incidence_call" />

            <Button
                android:id="@+id/button_map"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/incidence_map" />

            <Button
                android:id="@+id/button_state"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/incidence_map" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/incidence_state"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incidence_state"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/temp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/incidence_date"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incidence_date"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/temp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_closed_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/incidence_close_date"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incidence_close_date"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/temp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/incidence_name"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incidence_name"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/temp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/incidence_phone"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incidence_phone"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/temp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/incidence_address"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incidence_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:text="@string/temp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/incidence_desc"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incidence_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>